# tietorakenteet

./: Makefile  Node.cpp  Node.h  README.md  Stack.cpp  Stack.h  build.sh  runTests.sh  stackMain.cpp
src/: CMakeLists.txt
src/teht1/: Node.cpp
src/teht11/: SortedArray.cpp  SortedArray.h  main.cpp  tests.cpp
src/teht12/: BinaryHeap.cpp  BinaryHeap.h  tests.cpp
src/teht13/: HashTable.cpp  HashTable.h  main.cpp  tests.cpp
src/teht14/: Calc.cpp  Calc.h  main.cpp  tests.cpp
src/teht17/: BinaryTree.cpp  BinaryTree.h  Tester.cpp  oma-nopeustesti.cpp  randomString.cpp  set-nopeustesti.cpp  tests.cpp
src/teht19-2/: main.cpp  matkakortti.h  matkalippu.cpp
src/teht19-20/: main.cpp
src/teht19-22/: EtunimiComparator.cpp  SukuNimiComparator.cpp  main.cpp  matkakortti.cpp  matkalippu.h
src/teht2/: Queue.cpp  Queue.h  queueMain.cpp  tests.cpp
src/teht5/: Stack.cpp  Stack.h  iteratorMain.cpp  tests.cpp
src/teht6/: Node.h  Stack.cpp  Stack.h  stackMain.cpp
src/teht8/: BinaryTree.cpp  BinaryTree.h  Node.cpp  Node.h  Tester.cpp  tests.cpp
src/teht8-10/: BinaryTree.cpp  BinaryTree.h  Tester.cpp  tests.cpp
teht1/: Node.cpp  Node.h
teht2/: Queue.cpp  Queue.h
